# aws-sso-wrapper

./: .gitignore  INSTALL.md  README.md  main.py  pyproject.toml
aws_sso_wrapper/: __init__.py
